update date format

--- a/Demo/Demo/Views/People/Index.cshtml
+++ b/Demo/Demo/Views/People/Index.cshtml
@@ -142,7 +142,7 @@
                             <option value="Female">Female</option>
                         </select><br />
                         DOB:  <br />
-                        <input type="datetime" ng-model="updateUser.DOB | date:'MM/dd/yyyy'" style="width:200px"><br />
+                        <input type="date" ng-model="dateFormat" style="width:200px"><br />
                         Address:  <br />
                         <input type="text" ng-model="updateUser.Address" style="width:200px"><br />
                         Money: <br />
